Few changes done

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="profile">
           <img class="profile-img" src="images/profile.jpg" alt="saurabh-img">
           <h2>Hello.</h2>
-          <p class="intro">I am a Web Developer. I'm persuing my bachelors degree from Lovely Professional University.</p>
+          <p class="intro">I am a Backend Developer. I'm persuing my bachelors degree from Lovely Professional University.</p>
         </div>
         <hr>
         <div class="skills">
